# FaceMetric

./: CMakeLists.txt  README.md
CI/FreeImage/include/: FreeImage.h  Utilities.h
CI/face_api_test/include/: face_api_test_I.h  face_api_test_V.h  face_api_test_structs.h
include/: face_api.h  face_api_I.h  face_api_V.h  face_api_example_I.h  face_api_example_V.h  in_out.h  in_out_I.h  in_out_V.h  timing.h  utils.h  utils_I.h  utils_V.h
src/: face_api_I.cpp  face_api_V.cpp  face_api_example_I.cpp  face_api_example_V.cpp  in_out.cpp  in_out_I.cpp  in_out_V.cpp  main_I.cpp  main_V.cpp  timing.cpp  utils.cpp  utils_I.cpp  utils_V.cpp
